--- a/docs/fast_data/runtime_management/snippets/fabric_bff_credentials_viewer.mdx
+++ b/docs/fast_data/runtime_management/snippets/fabric_bff_credentials_viewer.mdx
@@ -7,14 +7,16 @@ import TabItem from "@theme/TabItem";
 ```json
 {
   "console": {
-    "target": "https://<your-mia-platform-console-url>",
-    "auth": {
-      "type": "oauth2",
-      "flow": "client_credentials",
-      "tokenEndpoint": "/api/m2m/oauth/token",
-      "credentials": {
-        "clientId": "<service-account-client-id>",
-        "clientSecret": "<service-account-client-secret>"
+    "rest": {
+      "target": "https://<your-mia-platform-console-url>",
+      "auth": {
+        "type": "oauth2",
+        "flow": "client_credentials",
+        "tokenEndpoint": "/api/m2m/oauth/token",
+        "credentials": {
+          "clientId": "<service-account-client-id>",
+          "clientSecret": "<service-account-client-secret>"
+        }
       }
     }
   }
@@ -28,15 +30,17 @@ import TabItem from "@theme/TabItem";
 ```json
 {
   "console": {
-    "target": "https://<your-mia-platform-console-url>",
-    "auth": {
-      "type": "oauth2",
-      "flow": "client_credentials",
-      "tokenEndpoint": "/api/m2m/oauth/token",
-      "credentials": {
-        "clientId": "<service-account-client-id>",
-        "clientKeyId": "<service-account-client-key-id>",
-        "privateKey": "<service-account-private-key>"
+    "rest": {
+      "target": "https://<your-mia-platform-console-url>",
+      "auth": {
+        "type": "oauth2",
+        "flow": "client_credentials",
+        "tokenEndpoint": "/api/m2m/oauth/token",
+        "credentials": {
+          "clientId": "<service-account-client-id>",
+          "clientKeyId": "<service-account-client-key-id>",
+          "privateKey": "<service-account-private-key>"
+        }
       }
     }
   }
