--- a/docs/fast_data/runtime_management/control_plane_operator.mdx
+++ b/docs/fast_data/runtime_management/control_plane_operator.mdx
@@ -92,6 +92,11 @@ The following properties support [secret resolution](/fast_data/configuration/se
 - `upstream.headers.*`
 :::
 
+:::caution
+In order for a _runtime_ to be recognized and managed by the main Control Plane instance, it has to belong to **one and only one** _runtime view_. Consequently,
+_runtimes_ that do not belong to any _runtime view_ are <u>simply ignored</u> by the system, while it is forbidden for a _runtime_ to belong to multiple _runtime views_.
+:::
+
 ### Pipelines Configuration
 
 Control Plane Operator requires an additional configuration file to learn the topology of Fast Data Pipelines deployed within the runtime
