--- a/docs/data_catalog/data_catalog_fabric_bff.mdx
+++ b/docs/data_catalog/data_catalog_fabric_bff.mdx
@@ -115,7 +115,7 @@ These details then should be inserted in your Fabric BFF service configuration u
 :::caution
 It is responsibility of your Company Owner to ensure that service account credentials are properly processed according to your company security policies.
 
-Furthermore, it is of <u>extreme importance</u> understanding that **any** Data Catalog user will be able to list the project name
+Furthermore, it is of <u>extreme importance</u> understanding that **any** Data Catalog user with enough permissions for [connections management](/data_catalog/frontend/data_catalog_connections.mdx) will be able to view the project name
 and available environments of all the projects that can be accessed by the service account configured on Fabric BFF. 
 :::
 
