--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -72,6 +72,10 @@ For Infrastructure Resources that have an associated repository defined in their
 
 ### Improvements
 
+#### Performance improvements
+
+Console now features [Rönd](https://github.com/rond-authz/rond) [v1.13](https://github.com/rond-authz/rond/releases/tag/v1.13.0) which provided a significant performance boost!
+
 #### New Flow Manager Configurator look
 
 We have refreshed the look of the Flow Manager Configurator with updated graphics, new colors, and several design improvements to enhance the overall user experience and visual appeal.
