setup release notes

--- a/docs/release-notes/v13.5.1.md
+++ b/docs/release-notes/v13.5.1.md
@@ -5,15 +5,7 @@ sidebar_label: v13.5.1
 image: "img/release-note-link-preview.png"
 ---
 
-_December 19th, 2024_
-
-:::info
-Mia-Platform Console v13.5.1 is **now in Preview** and will be generally available on January 16th.
-
-Console SaaS users can try out v13.5.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_January 16th, 2025_
 
 ## New Flow Manager Configurator Layout
 
@@ -115,4 +107,4 @@ And with updates of internal dependencies in order to improve stability and reli
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `13.9.2-beta.2`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.9.2`.
