update: azure credentials page

--- a/docs/console/company-configuration/clusters-management/connect-and-manage-cluster.mdx
+++ b/docs/console/company-configuration/clusters-management/connect-and-manage-cluster.mdx
@@ -78,7 +78,7 @@ For credentials of the type "Client credentials":
 * **Access token URL** (*required*): the reference OAuth2 authorization endpoint URL that, to requests that include client ID and client secret, responds by generating temporary credentials;
 * **Client ID** (*required*): OAuth2 public client identifier;
 * **Client secret** (*required*): OAuth2 secret, known only to the client and the authorization server;
-* **Scope** (*required*): permission set used to grant access to specific resource functionalities. In other words, a scope represents what an application can access on behalf of the user.
+* **Scope**: permission set used to grant access to specific resource functionalities. In other words, a scope represents what an application can access on behalf of the user.
 
 </TabItem>
 <TabItem value="client-credentials-certificate" label="Client credentials certificate">
@@ -89,7 +89,7 @@ For credentials of the type "Client credentials certificate":
 * **Client ID** (*required*): OAuth2 public client identifier;
 * **Private key** (*required*): private key of the client certificate used as an authentication token to sign a JWT assertion (in PEM format);
 * **Certificate thumbprint** (*required*): hash of the certificate, computed over all certificate data and its signature, used as a unique identifier for the certificate itself;
-* **Scope** (*required*): permission set used to grant access to specific resource functionalities. In other words, a scope represents what an application can access on behalf of the user.
+* **Scope**: permission set used to grant access to specific resource functionalities. In other words, a scope represents what an application can access on behalf of the user.
 
 </TabItem>
 </Tabs>
