--- a/docs/console/company-configuration/providers/configure-provider.mdx
+++ b/docs/console/company-configuration/providers/configure-provider.mdx
@@ -169,14 +169,19 @@ For credentials of the type "Client credentials":
 - **Client secret** (*required*): the shared secret, known only to the client and the authorization server.
 - **Scope**: an optional scope to restrict the generated token permissions
 
+You can see more documentation to this link: [Client Credentials Grant](https://learn.microsoft.com/en-us/entra/identity-platform/v2-oauth2-client-creds-grant-flow#first-case-access-token-request-with-a-shared-secret)
+
 </TabItem>
 <TabItem value="client-credentials-certificate" label="Client credentials certificate">
 
 For credentials of the type "Client credentials certificate":
 - **Access token URL** (*required*): the reference authorization endpoint URL that, to requests that include client ID and client secret, responds by generating temporary credentials;
-- **Client ID** (*required*): public client identifier;
-- **Private key** (*required*): the PEM-encoded private key whose certificate has been registered against the authorization service;
+- **Client ID** (*required*): public client identifier. It is used to create the client assertion;
+- **Certificate Thumbprint** (*required*): The thumbprint of the client certificate. It is used to create the client assertion;
+- **Private key** (*required*): the PEM-encoded private key whose certificate has been registered against the authorization service. It is used to create the client assertion;
 - **Scope**: an optional scope to restrict the generated token permissions
+
+You can see more documentation to this link: [Client Credentials Grant](https://learn.microsoft.com/en-us/entra/identity-platform/v2-oauth2-client-creds-grant-flow#third-case-access-token-request-with-a-federated-credential)
 
 </TabItem>
 </Tabs>
@@ -195,11 +200,11 @@ Credentials entered at this stage, for security reasons, will never again be sho
 Depending on the provider selected in step 1, the types of credentials supported will change. The following table shows the credential types supported by each provider:
 
 | Credentials Type               | Providers                                                                |
-| ------------------------------ |:------------------------------------------------------------------------:|
+| ------------------------------ | ------------------------------------------------------------------------ |
 | Token                          | GitLab, GitHub, Bitbucket, Azure DevOps, Vault, Jenkins, Azure Key Vault |
 | M2M                            | Vault                                                                    |
-| Client Credentials             | Azure Key Vault,Jenkins                                                  |
-| Client Credentials Certificate | Azure Key Vault                                                          |
+| Client Credentials             | Azure Key Vault, Azure DevOps, Jenkins                                   |
+| Client Credentials Certificate | Azure Key Vault, Azure DevOps                                            |
 
 :::caution Assign the right scope to your credentials
 Make sure, when generating credentials on the respective provider sites, to assign them a scope so that they have the necessary permissions for all read and write operations performed through the Console.
