--- a/docs/release-notes/v13.5.2.md
+++ b/docs/release-notes/v13.5.2.md
@@ -24,7 +24,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 #### New Authentication Methods for Azure Dev Ops as a Provider
 
 New authentication methods have been added in order to connect Azure Dev Ops as a Provider in Console. 
-Specifically, you will now be able to select `Client Credentials` and `Client Credentials Certificate` as an authentication method during the Add or Edit Provider flow.
+Specifically, it is now possible to select `Client Credentials` and `Client Credentials Certificate` as an authentication method during the Add or Edit Provider flow.
 
 #### 
 
