add back-kit rn

--- a/docs/release-notes/v13.5.2.md
+++ b/docs/release-notes/v13.5.2.md
@@ -49,10 +49,13 @@ This version addressed a few bugs, here is a comprehensive list:
 
 #### Improvements
 
-##### 
+##### Introduced `method` property to `bk-import-modal` for HTTP request selection
+
+Add `method` property to `bk-import-modal` to choose which method to use for the `/import` HTTP request
 
 #### Bug Fix
 
+- Fixed formats for dates in isPartialFormat mode
 
 ## Marketplace
 
