inserting useful paragraphs

--- a/docs/release-notes/v13.5.2.md
+++ b/docs/release-notes/v13.5.2.md
@@ -24,6 +24,19 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 New authentication methods have been added in order to connect Azure Dev Ops as a Provider in Console. 
 Specifically, it is now possible to select `Client Credentials` and `Client Credentials Certificate` as an authentication method during the Add or Edit Provider flow.
 
+## Microfrontend Composer
+
+### Back-Kit Library
+
+#### Improvements
+
+##### Introduced `method` property to `bk-import-modal` for HTTP request selection
+
+Add `method` property to `bk-import-modal` to choose which method to use for the `/import` HTTP request
+
+#### Bug Fix
+
+- Fixed formats for dates in isPartialFormat mode
 
 ## How to update your Console
 
