update backkit library version

--- a/docs/release-notes/v13.5.2.md
+++ b/docs/release-notes/v13.5.2.md
@@ -28,6 +28,10 @@ Specifically, it is now possible to select `Client Credentials` and `Client Cred
 
 ### Back-Kit Library
 
+The new version `v1.5.14` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
 #### Improvements
 
 ##### Introduced `method` property to `bk-import-modal` for HTTP request selection
