feat: add maxBatchSize config to both RTU and SVTG pages

--- a/docs/fast_data/configuration/single_view_trigger_generator.mdx
+++ b/docs/fast_data/configuration/single_view_trigger_generator.mdx
@@ -23,21 +23,21 @@ The following table indicates all the available environment variables for you to
 When creating the service from the marketplace the following environment variables will be added for you with some default values but you still need to properly update them to make the service work
 :::
 
-| Name                             | Required | Description                                                                                                                                                                                             | Default value |
-|----------------------------------|----------|---------------------------------------------------------------------------------------------- |---------------|
-| LOG_LEVEL                        | &check;  | Level to use for logging; to choose from: error, fatal, warn, info, debug, trace, silent                                                                                                                | silent        |
-| MONGODB_URL                      | &check;  | MongoDB URL where the projections are stored                                                                                                                                                            | -             |
-| MONGODB_NAME                     | &check;  | MongoDB Database name where the projections are stored                                                                                                                                                  | -             |
-| EVENT_STORE_CONFIG_PATH          | &check;  | Path to the [Event Store Config](#event-store-config) file                                                                                                                                              | -             |
-| EVENT_STORE_TARGET               | &check;  | Kafka topic to send the `sv-trigger` messages or MongoDB collection to save the `pc` records                                                                                                            | -             |
-| SINGLE_VIEW_NAME                 | &check;  | The name of the Single View                                                                                                                                                                             | -             |
-| KAFKA_PROJECTION_UPDATES_FOLDER  | &check;  | Path to the [Kafka Projection Updates](#kafka-projection-updates) folder                                                                                                                                | -             |
-| ER_SCHEMA_FOLDER                 | &check;  | Path to the [ER Schema](#er-schema) folder                                                                                                                                                              | -             |
-| PROJECTION_CHANGES_SCHEMA_FOLDER | &check;  | Path to the [Projection Changes Schema](#projection-changes-schema) folder                                                                                                                              | -             |
-| MANUAL_STRATEGIES_FOLDER         | -        | Absolute path of custom strategy functions folder. These functions are used in `__fromFile__` annotations inside the [Kafka Projection Updates Configuration](/fast_data/configuration/config_maps/kafka_projection_updates.mdx)                                                                                                                   | -             |
-| TRIGGER_CUSTOM_FUNCTIONS_FOLDER  | -        | Absolute path of custom functions folder. These functions are used in `__fromFile__` annotations inside the [Projection Changes Schema Configuration](/fast_data/configuration/config_maps/projection_changes_schema.md#custom-functions).                                                                                                                                      | -            |
-| CONTROL_PLANE_CONFIG_PATH          | -        | Starting from `v3.3.0`, is possible to configure Runtime Management. More details [on the dedicated section](/fast_data/runtime_management/workloads.mdx?workload=svtg#single-view-trigger-generator)                                                                                                                                                                                                                                                                                                                                    | 
-| CONTROL_PLANE_BINDINGS_PATH        | -        | Starting from `v3.3.0`, is possible to configure Runtime Management. More details [on the dedicated section](/fast_data/runtime_management/workloads.mdx?workload=svtg#single-view-trigger-generator)                                                                                                                                                                                                                                                                                                                                     |  
+| Name                             | Required | Description                                                                                                                                                                                                                                | Default value |
+| -------------------------------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------- |
+| LOG_LEVEL                        | &check;  | Level to use for logging; to choose from: error, fatal, warn, info, debug, trace, silent                                                                                                                                                   | silent        |
+| MONGODB_URL                      | &check;  | MongoDB URL where the projections are stored                                                                                                                                                                                               | -             |
+| MONGODB_NAME                     | &check;  | MongoDB Database name where the projections are stored                                                                                                                                                                                     | -             |
+| EVENT_STORE_CONFIG_PATH          | &check;  | Path to the [Event Store Config](#event-store-config) file                                                                                                                                                                                 | -             |
+| EVENT_STORE_TARGET               | &check;  | Kafka topic to send the `sv-trigger` messages or MongoDB collection to save the `pc` records                                                                                                                                               | -             |
+| SINGLE_VIEW_NAME                 | &check;  | The name of the Single View                                                                                                                                                                                                                | -             |
+| KAFKA_PROJECTION_UPDATES_FOLDER  | &check;  | Path to the [Kafka Projection Updates](#kafka-projection-updates) folder                                                                                                                                                                   | -             |
+| ER_SCHEMA_FOLDER                 | &check;  | Path to the [ER Schema](#er-schema) folder                                                                                                                                                                                                 | -             |
+| PROJECTION_CHANGES_SCHEMA_FOLDER | &check;  | Path to the [Projection Changes Schema](#projection-changes-schema) folder                                                                                                                                                                 | -             |
+| MANUAL_STRATEGIES_FOLDER         | -        | Absolute path of custom strategy functions folder. These functions are used in `__fromFile__` annotations inside the [Kafka Projection Updates Configuration](/fast_data/configuration/config_maps/kafka_projection_updates.mdx)           | -             |
+| TRIGGER_CUSTOM_FUNCTIONS_FOLDER  | -        | Absolute path of custom functions folder. These functions are used in `__fromFile__` annotations inside the [Projection Changes Schema Configuration](/fast_data/configuration/config_maps/projection_changes_schema.md#custom-functions). | -             |
+| CONTROL_PLANE_CONFIG_PATH        | -        | Starting from `v3.3.0`, is possible to configure Runtime Management. More details [on the dedicated section](/fast_data/runtime_management/workloads.mdx?workload=svtg#single-view-trigger-generator)                                      | -             |
+| CONTROL_PLANE_BINDINGS_PATH      | -        | Starting from `v3.3.0`, is possible to configure Runtime Management. More details [on the dedicated section](/fast_data/runtime_management/workloads.mdx?workload=svtg#single-view-trigger-generator)                                      | -             |
 
 ## Attaching a Service to a Single View
 
