--- a/docs/release-notes/v13.3.3.md
+++ b/docs/release-notes/v13.3.3.md
@@ -13,7 +13,7 @@ _January 16th, 2025_
 
 This version addressed the following bug:
 
-* remove from Fast Data revamp the unnecessary checks on Fast Data configuration for the Control Plane
+* removed some unnecessary checks on Fast Data configuration for the Control Plane
 
 ## How to update your Console
 
