--- a/docs/release-notes/v13.3.5.md
+++ b/docs/release-notes/v13.3.5.md
@@ -13,7 +13,7 @@ _January 27th, 2025_
 
 This version addressed the following bug:
 
-* solved a bug that prevented the aggregation steps of a Single View pipeline from displaying correctly in case of multiple Single View Creator services attached to a Single View
+* solved a bug that prevented the aggregation steps of a Single View pipeline from displaying correctly on Fast Data Control Plane UI in case of multiple Single View Creator services attached to a Single View
 
 ## How to update your Console
 
